aligned nav bar links to correct layout using flexbox

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,21 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+a {
+  text-decoration: none;
+  margin: 10px;
+  color: grey;
+}
